refactor: 重构任务组节点处理逻辑与数据结构
1. 在JobComposeServiceImpl中：
   - 移除动态任务组节点过滤逻辑，改为直接使用所有节点
   - 恢复节点位置计算和尺寸设置功能
   - 简化任务组子节点收集逻辑，直接使用nodesByParent映射
   - 优化任务组节点属性处理，保留原始属性

2. 在JobNodeVo中：
   - 新增childrenNodes字段支持嵌套节点结构
   - 移除冗余的子节点ID转换逻辑