@@ -473,58 +473,58 @@ public class JobComposeServiceImpl implements JobComposeService {
         getJobCompose(id, nodeVos, edgeVos, randomId);
         //创建一个父亲节点
         // 修复：使用忽略大小写的匹配来查找任务组节点（因为数据库中的node_type可能是custom-group小写）
-        List<JobNodeVo> dynamicGroupNodes = nodeVos.stream()
-            .filter(node -> node.getNodeType() != null && 
-                           DYNAMIC_GROUP.equalsIgnoreCase(node.getNodeType()))
-            .collect(Collectors.toList());
+//        List<JobNodeVo> dynamicGroupNodes = nodeVos.stream()
+//            .filter(node -> node.getNodeType() != null &&
+//                           DYNAMIC_GROUP.equalsIgnoreCase(node.getNodeType()))
+//            .toList();
         
         // 收集所有任务组节点的子节点ID（需要过滤掉，因为它们属于任务组节点，不属于根任务组）
-        Set<String> childNodeIdsToFilter = new HashSet<>();
-        if (dynamicGroupNodes != null && !dynamicGroupNodes.isEmpty()) {
-            for (JobNodeVo groupNode : dynamicGroupNodes) {
-                String children = groupNode.getChildren();
-                if (StringUtils.isNotBlank(children)) {
-                    List<String> childIds = JSONUtil.parseArray(children).toList(String.class);
-                    childNodeIdsToFilter.addAll(childIds);
-                }
-            }
-        }
+//        Set<String> childNodeIdsToFilter = new HashSet<>();
+//        if (dynamicGroupNodes != null && !dynamicGroupNodes.isEmpty()) {
+//            for (JobNodeVo groupNode : dynamicGroupNodes) {
+//                String children = groupNode.getChildren();
+//                if (StringUtils.isNotBlank(children)) {
+//                    List<String> childIds = JSONUtil.parseArray(children).toList(String.class);
+//                    childNodeIdsToFilter.addAll(childIds);
+//                }
+//            }
+//        }
         
         // 过滤掉任务组节点的子节点，但保留任务组节点本身
         // 注意：任务组节点的子节点的job_parent_id应该是任务组节点的jobId，而不是根任务组的jobId
         // 所以我们需要通过children字段来识别哪些节点是任务组节点的子节点
-        List<JobNodeVo> nodeList = nodeVos.stream()
-            .filter(n -> {
-                // 保留任务组节点本身
-                if (n.getNodeType() != null && DYNAMIC_GROUP.equalsIgnoreCase(n.getNodeType())) {
-                    return true;
-                }
-                // 过滤掉任务组节点的子节点
-                return !childNodeIdsToFilter.contains(n.getId());
-            })
-            .collect(Collectors.toList());
-        List<String> firstNodes = nodeList.stream().map(JobNodeVo::getId).toList();
+//        List<JobNodeVo> nodeList = nodeVos.stream()
+//            .filter(n -> {
+//                // 保留任务组节点本身
+//                if (n.getNodeType() != null && DYNAMIC_GROUP.equalsIgnoreCase(n.getNodeType())) {
+//                    return true;
+//                }
+//                // 过滤掉任务组节点的子节点
+//                return !childNodeIdsToFilter.contains(n.getId());
+//            })
+//            .collect(Collectors.toList());
+        //List<String> firstNodes = nodeList.stream().map(JobNodeVo::getId).toList();
 
         JobInfo jobInfo = jobInfoService.getById(id);
         JobNodeVo jobNodeVo = new JobNodeVo();
         jobNodeVo.setId(randomId + DYNAMIC_GROUP);
         jobNodeVo.setJobId(jobInfo.getId());
-        jobNodeVo.setChildren(JSONUtil.toJsonStr(firstNodes));
+        jobNodeVo.setChildren(JSONUtil.toJsonStr(nodeVos));
         jobNodeVo.setNodeType(DYNAMIC_GROUP);
         jobNodeVo.setJobName(jobInfo.getJobDesc());
         Map<String, Object> properties = new HashMap<>();
         properties.put(JOB_ID, String.valueOf(jobInfo.getId()));
-        properties.put("children", JSONUtil.toJsonStr(firstNodes));
-        properties.put("isRestrict", true);
-        properties.put("autoResize", true);
+        properties.put("children", JSONUtil.toJsonStr(nodeVos));
+//        properties.put("isRestrict", true);
+//        properties.put("autoResize", true);
         //计算最大高度和最大宽度
-//        double[] styleArr = getMaxWidthHeight(nodeVos);
-//        //！！！设置节点的位置，一定要除2，前端真的巨难
-//        jobNodeVo.setNodePositionX(styleArr[3] + (styleArr[1] - styleArr[3]) / 2);
-//        jobNodeVo.setNodePositionY(styleArr[0] + (styleArr[2] - styleArr[0]) / 2);
-//        properties.put("height", styleArr[2] - styleArr[0] + 10);
-//        properties.put("width", styleArr[1] - styleArr[3] + 10);
-//        jobNodeVo.setProperties(JSONUtil.toJsonStr(properties));
+        double[] styleArr = getMaxWidthHeight(nodeVos);
+        //！！！设置节点的位置，一定要除2，前端真的巨难
+        jobNodeVo.setNodePositionX(styleArr[3] + (styleArr[1] - styleArr[3]) / 2);
+        jobNodeVo.setNodePositionY(styleArr[0] + (styleArr[2] - styleArr[0]) / 2);
+        properties.put("height", styleArr[2] - styleArr[0] + 10);
+        properties.put("width", styleArr[1] - styleArr[3] + 10);
+        jobNodeVo.setProperties(JSONUtil.toJsonStr(properties));
 
         if (type == 1) {
             nodeVos.add(jobNodeVo);
@@ -937,30 +937,7 @@ public class JobComposeServiceImpl implements JobComposeService {
         List<JobEdge> allJobEdges = jobEdgeService.list(
             new LambdaQueryWrapper<JobEdge>().in(JobEdge::getJobParentId, allJobIds)
         );
-        
-        // 2.1 修复：如果发现任务组节点，需要将它们的jobId也添加到allJobIds中，以便查询它们的子节点
-        // 因为任务组节点的子节点的job_parent_id是任务组节点的jobId，而不是任务组节点的job_parent_id
-        Set<Long> groupJobIds = new HashSet<>();
-        for (JobNode node : allJobNodes) {
-            if (DYNAMIC_GROUP.equalsIgnoreCase(node.getNodeType())) {
-                Long groupJobId = node.getJobId();
-                if (groupJobId != null && !allJobIds.contains(groupJobId)) {
-                    groupJobIds.add(groupJobId);
-                }
-            }
-        }
-        // 如果发现新的任务组节点，需要查询它们的子节点
-        if (!groupJobIds.isEmpty()) {
-            allJobIds.addAll(groupJobIds);
-            List<JobNode> additionalNodes = jobNodeService.list(
-                new LambdaQueryWrapper<JobNode>().in(JobNode::getJobParentId, groupJobIds)
-            );
-            List<JobEdge> additionalEdges = jobEdgeService.list(
-                new LambdaQueryWrapper<JobEdge>().in(JobEdge::getJobParentId, groupJobIds)
-            );
-            allJobNodes.addAll(additionalNodes);
-            allJobEdges.addAll(additionalEdges);
-        }
+
         
         // 3. 批量查询所有JobInfo
         Set<Long> jobInfoIds = allJobNodes.stream().map(JobNode::getJobId).collect(Collectors.toSet());
@@ -989,19 +966,17 @@ public class JobComposeServiceImpl implements JobComposeService {
      * @param allJobIds 所有任务组ID集合（输出参数）
      */
     private void collectAllJobIds(Long jobId, Set<Long> allJobIds) {
-        // 如果已经收集过，直接返回（避免重复查询）
-        if (allJobIds.contains(jobId)) {
-            return;
-        }
-        
+
         List<JobNode> nodes = jobNodeService.list(
             new LambdaQueryWrapper<JobNode>().eq(JobNode::getJobParentId, jobId)
         );
+
+        allJobIds.addAll(nodes.stream().map(JobNode::getJobId).toList());
         
         for (JobNode node : nodes) {
             if (DYNAMIC_GROUP.equalsIgnoreCase(node.getNodeType())) {
                 Long childJobId = node.getJobId();
-                if (childJobId != null && allJobIds.add(childJobId)) {
+                if (childJobId != null) {
                     // 递归收集子任务组的ID
                     collectAllJobIds(childJobId, allJobIds);
                 }
@@ -1114,35 +1089,33 @@ public class JobComposeServiceImpl implements JobComposeService {
             if (DYNAMIC_GROUP.equalsIgnoreCase(node.getNodeType())) {
                 String children = node.getChildren();
                 List<String> childIds = new ArrayList<>();
-                
-                // 如果children字段不为空，使用它
-                if (StringUtils.isNotBlank(children)) {
-                    childIds = JSONUtil.parseArray(children).toList(String.class);
-                } else {
-                    // 如果children字段为空，从nodesByParent中查找子节点
-                    // 任务组节点的子节点的job_parent_id应该等于任务组节点的jobId
-                    List<JobNode> childNodes = nodesByParent.getOrDefault(node.getJobId(), Collections.emptyList());
-                    for (JobNode childNode : childNodes) {
-                        // 排除任务组节点本身（避免循环）
-                        if (!DYNAMIC_GROUP.equalsIgnoreCase(childNode.getNodeType())) {
-                            childIds.add(String.valueOf(childNode.getId()));
-                        }
+
+                List<JobNode> childNodes = nodesByParent.getOrDefault(node.getJobId(), Collections.emptyList());
+
+                List<JobNodeVo> jobNodeVoList = new ArrayList<>();
+                for (JobNode childNode : childNodes) {
+                    if (!DYNAMIC_GROUP.equalsIgnoreCase(childNode.getNodeType())) {
+                        childIds.add(String.valueOf(childNode.getId()));
+                        childIds.add(String.valueOf(childNode.getId()));
+                        JobNodeVo childJobNodeVo = BeanUtil.copyProperties(childNode, JobNodeVo.class);
+                        jobNodeVoList.add(childJobNodeVo);
                     }
-                    
                 }
-                
-                // 修复：即使childIds为空，也要设置children字段（为空数组），以便前端能够识别任务组节点
-                List<String> newChildIds = new ArrayList<>();
-                for (String childId : childIds) {
-                    newChildIds.add(randomId + childId);
-                }
-                Map<String, Object> propertiesMap = JSONUtil.toBean(node.getProperties(), Map.class);
-                if (propertiesMap == null) {
-                    propertiesMap = new HashMap<>();
-                }
-                propertiesMap.put("children", JSONUtil.toJsonStr(newChildIds));
-                jobNodeVo.setProperties(JSONUtil.toJsonStr(propertiesMap));
-                jobNodeVo.setChildren(JSONUtil.toJsonStr(newChildIds));
+
+                jobNodeVo.setChildrenNodes(jobNodeVoList);
+
+//                // 修复：即使childIds为空，也要设置children字段（为空数组），以便前端能够识别任务组节点
+//                List<String> newChildIds = new ArrayList<>();
+//                for (String childId : childIds) {
+//                    newChildIds.add(randomId + childId);
+//                }
+                 Map<String, Object> propertiesMap = JSONUtil.toBean(node.getProperties(), Map.class);
+//                if (propertiesMap == null) {
+//                    propertiesMap = new HashMap<>();
+//                }
+//                propertiesMap.put("children", JSONUtil.toJsonStr(newChildIds));
+                  jobNodeVo.setProperties(JSONUtil.toJsonStr(propertiesMap));
+//                jobNodeVo.setChildren(JSONUtil.toJsonStr(newChildIds));
                 
                 // 递归处理子任务组（不再查询数据库）
                 if (!childIds.isEmpty()) {
